SteveHorses OLD/Steve PRO OLD/logs/run_20250901_003607_full.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 210
    if SHOW_NUMBERS and h.get("program"): nm = f\"#{h['program']} {nm}\"
                                                                       ^
SyntaxError: unexpected character after line continuation character
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 210
    if SHOW_NUMBERS and h.get("program"): nm = f\"#{h['program']} {nm}\"
                                                                       ^
SyntaxError: unexpected character after line continuation character
